--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -1,6 +1,10 @@
+@import './componentes/animations.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 
 body{
@@ -8,3 +12,11 @@ body{
 }
 
 [x-cloak] { display: none !important; }
+
+
+.backend-background-image{
+    background-image: url('../../public/images/system/background/7230.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+}
